@@ -45,6 +45,48 @@ class VectorSelectorValidationTests {
     }
 
     @Test
+    fun `embedded vector without embedding fails startup naming both selectors`() {
+        val failure = failureFor(mapOf("app.service.core.vector" to "embedded"))
+
+        assertThat(failure.message)
+            .contains("app.service.core.vector=embedded")
+            .contains("app.service.core.embedding")
+    }
+
+    @Test
+    fun `embedded vector with a reserved embedding fails startup`() {
+        val failure = failureFor(
+            mapOf("app.service.core.vector" to "embedded", "app.service.core.embedding" to "local")
+        )
+
+        assertThat(failure.message).contains("app.service.core.embedding=local")
+    }
+
+    @Test
+    fun `the illegal pair message lists every legal pair`() {
+        val failure = failureFor(
+            mapOf("app.service.core.vector" to "sqlite", "app.service.core.embedding" to "mock")
+        )
+
+        for ((vector, embedding) in LEGAL_PAIRS) {
+            assertThat(failure.message).contains("vector=$vector with embedding=$embedding")
+        }
+    }
+
+    @Test
+    fun `embedded fails startup when the Vector API is absent`() {
+        // This module declares no --add-modules jdk.incubator.vector, so the
+        // module is absent here. That is the condition under test.
+        val failure = failureFor(
+            mapOf("app.service.core.vector" to "embedded", "app.service.core.embedding" to "mock")
+        )
+
+        assertThat(failure.message)
+            .contains("jdk.incubator.vector")
+            .contains("--add-modules")
+    }
+
+    @Test
     fun `both unset starts`() {
         runner(emptyMap()).run { context ->
             assertThat(context).hasNotFailed()
@@ -53,7 +95,10 @@ class VectorSelectorValidationTests {
 
     @Test
     fun `legal pairs start`() {
-        for ((vector, embedding) in listOf("mock" to "mock", "simple" to "mock", "redis" to "mock")) {
+        // embedded is excluded. This module's test JVM carries no
+        // --add-modules jdk.incubator.vector, so the Vector API check
+        // rejects it. The positive path is proven in chat-deploy-memory.
+        for ((vector, embedding) in LEGAL_PAIRS.filterNot { it.first == "embedded" }) {
             runner(
                 mapOf(
                     "app.service.core.vector" to vector,
@@ -63,6 +108,16 @@ class VectorSelectorValidationTests {
                 assertThat(context).hasNotFailed()
             }
         }
+    }
+
+    private companion object {
+        // Mirrors VectorSelectorValidation.legalPairs. Both must change together.
+        val LEGAL_PAIRS = listOf(
+            "mock" to "mock",
+            "simple" to "mock",
+            "redis" to "mock",
+            "embedded" to "mock",
+        )
     }
 
     private fun runner(properties: Map<String, String>): ApplicationContextRunner =
